<resources>
    <string name="app_name">appRadioButton</string>
    <string name="num1">Ingrese el 1er numero</string>
    <string name="num2">Ingrese el 2do numero</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="calcular">CALCULAR</string>
    <string name="result">resultado...</string>
</resources>